first steps at legacyforge